--- a/documentation/index.html
+++ b/documentation/index.html
@@ -231,6 +231,8 @@ layout: page
     </tr>
   </table>
 
+<h3>Definitions</h3>
+{{ apijson.definitions}}
 {% for definition in apijson.definitions %}
 
   {% assign definition_name = definition[0] %}
