--- a/documentation/index.html
+++ b/documentation/index.html
@@ -224,7 +224,10 @@ layout: page
                           {% endfor %}
                         </table>
 
-                        <h3>Definitions-2</h3>
+                        <tr style="background-color: #D3D3D3;">
+                          <td align="left" style="font-size: 18px; font-weight: bold; padding: 10px;">Entities</td>
+                          <td align="right" style="padding: 10px;"></td>
+                        </tr>
                         {% assign taglist = '' %}
                         {% for spec in openapi_spec_json %}
 
@@ -233,16 +236,22 @@ layout: page
                             {% assign definition_name = definition[0] %}
                             {% assign fields = definition[1] %}
 
-                            <strong>{{ definition_name }}</strong><br />
-                            --{{ fields.properties }}--
-                            {% for property in fields.properties %}
+                            <tr>
+                              <td>
+                                <strong>{{ definition_name }}</strong><br />
+                                --{{ fields.properties }}--
+                                <ul>
+                                {% for property in fields.properties %}
 
-                              {% assign property_name = property[0] %}
-                              {% assign property = property[1] %}
+                                  {% assign property_name = property[0] %}
+                                  {% assign property = property[1] %}
 
-                              {{ property_name }}<br />
+                                  <li>{{ property_name }}</li>
 
-                            {% endfor %}
+                                {% endfor %}
+                              </ul>
+                              </td>
+                            </tr>
 
                           {% endfor %}
                         {% endfor %}
