--- a/documentation/index.html
+++ b/documentation/index.html
@@ -234,7 +234,7 @@ layout: page
                             {% assign definition_name = definition[0] %}
                             {% assign fields = definition[1] %}
                             <tr>
-                              <td>
+                              <td style="padding-left: 5px;">
                                 <strong>{{ definition_name }}</strong>
                                 <ul style='padding-left: 25px; margin-top:5px;'>
                                 {% for property in fields.properties %}
