--- a/documentation/index.html
+++ b/documentation/index.html
@@ -223,6 +223,9 @@ layout: page
 
                           {% endfor %}
 
+                          <tr style="background-color: #D3D3D3;">
+                            <td colspan="2"></td>
+                          </tr>
                         <tr style="background-color: #D3D3D3;">
                           <td align="left" style="font-size: 18px; font-weight: bold; padding: 10px;">Entities</td>
                           <td align="right" style="padding: 10px;"></td>
@@ -233,7 +236,7 @@ layout: page
                             {% assign definition_name = definition[0] %}
                             {% assign fields = definition[1] %}
                             <tr>
-                              <td style="padding-left: 5px;">
+                              <td style="padding-left: 10px; padding-top: 10px;">
                                 <strong>{{ definition_name }}</strong>
                                 <ul style='padding-left: 25px; margin-top:5px;'>
                                 {% for property in fields.properties %}
@@ -246,7 +249,7 @@ layout: page
                             </tr>
                           {% endfor %}
                         {% endfor %}
-                        
+
                         </table>
                       </td>
                     </tr>
