--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1,5 +1,6 @@
 ---
 layout: page
+file_name: Learn the Basics
 ---
 <script type="text/javascript">
   function showme($id)
@@ -178,6 +179,8 @@ layout: page
                           {% for filter in api_filters %}
                             {{ filter.name }}<br />
                           {% endfor %}
+
+                          HERE: {{ file_name }}
                         </td>
                       </tr>
                     {% endif %}
