--- a/documentation/index.html
+++ b/documentation/index.html
@@ -203,6 +203,9 @@ file_name: Learn the Basics
                           {% for spec in openapi_spec_json %}
                             {% for path in spec.paths %}
                               {% assign method_json = path[1] %}
+
+                              HERE2: {{ method_json }}
+
                               {% for method in method_json %}
                                 {% assign tagarray = method[1].tags %}
                                 {% assign tag = tagarray[0] %}
@@ -225,6 +228,7 @@ file_name: Learn the Basics
                             {% for spec in openapi_spec_json %}
                               {% for path in spec.paths %}
                                 {% assign method_json = path[1] %}
+                                HERE3: {{ method_json }}
                                 {% for method in method_json %}
 
                                   {% assign tagarray = method[1].tags %}
