--- a/documentation/index.html
+++ b/documentation/index.html
@@ -180,8 +180,6 @@ layout: page
                           {% for filter in api_filters %}
                             {{ filter.name }}<br />
                           {% endfor %}
-
-                          HERE: {{ filter_name }}
                         </td>
                       </tr>
                     {% endif %}
@@ -207,17 +205,26 @@ layout: page
                               {% assign this_path = path[0] %}
                               {% assign method_json = path[1] %}
 
-                              HERE2: {{ this_path }}
-
-                              {% for method in method_json %}
-                                {% assign tagarray = method[1].tags %}
-                                {% assign tag = tagarray[0] %}
-                                {% if taglist contains tag %}
-                                {% else %}
-                                  {% assign taglist = taglist | append:',' %}
-                                  {% assign taglist = taglist | append:tag %}
+                              {% assign filter_path = 0 %}
+                              {% for filter in api_filters %}
+                                {% assign this_filter_name = filter.name %}
+                                {% if this_filter_name != filter_name %}
+                                  {% assign filter_path = 1 %}
                                 {% endif %}
                               {% endfor %}
+
+                              {% if filter_path == 0 %}
+                                {% for method in method_json %}
+                                  {% assign tagarray = method[1].tags %}
+                                  {% assign tag = tagarray[0] %}
+                                  {% if taglist contains tag %}
+                                  {% else %}
+                                    {% assign taglist = taglist | append:',' %}
+                                    {% assign taglist = taglist | append:tag %}
+                                  {% endif %}
+                                {% endfor %}
+                              {% endif %}
+
                             {% endfor %}
                           {% endfor %}
 
@@ -230,41 +237,55 @@ layout: page
 
                             {% for spec in openapi_spec_json %}
                               {% for path in spec.paths %}
+
+                                {% assign this_path = path[0] %}
                                 {% assign method_json = path[1] %}
 
-                                {% for method in method_json %}
-
-                                  {% assign tagarray = method[1].tags %}
-                                  {% assign tag = tagarray[0] %}
-
-                                  {% assign verb = method[0] | upcase %}
-
-                                  {% if verb == 'GET' %}
-                                    {% assign back_color = site.get_color %}
+                                {% assign filter_path = 0 %}
+                                {% for filter in api_filters %}
+                                  {% assign this_filter_name = filter.name %}
+                                  {% if this_filter_name != filter_name %}
+                                    {% assign filter_path = 1 %}
                                   {% endif %}
-                                  {% if verb == 'POST' %}
-                                    {% assign back_color = site.post_color %}
-                                  {% endif %}
-                                  {% if verb == 'PUT' %}
-                                    {% assign back_color = site.put_color %}
-                                  {% endif %}
-                                  {% if verb == 'DELETE' %}
-                                    {% assign back_color = site.delete_color %}
-                                  {% endif %}
-
-                                  {% assign summary = method[1].summary %}
-
-                                  {% if tag == grouptag %}
-                                    <tr>
-                                      <td style="padding-left: 20px; font-size: 12px;">{{ summary }}</td>
-                                      <td style="font-size: 12px;">{{ path[0] }}</td>
-                                      <td align="center" style="padding: 5px; width: 75px; background-color:#{{ back_color }}; font-weight: bold; font-size: 11px; color: #FFF;">
-                                        {{ verb }}
-                                      </td>
-                                    </tr>
-                                  {% endif %}
-
                                 {% endfor %}
+
+                                {% if filter_path == 0 %}
+                                  {% for method in method_json %}
+
+                                    {% assign tagarray = method[1].tags %}
+                                    {% assign tag = tagarray[0] %}
+
+                                    {% assign verb = method[0] | upcase %}
+
+                                    {% if verb == 'GET' %}
+                                      {% assign back_color = site.get_color %}
+                                    {% endif %}
+                                    {% if verb == 'POST' %}
+                                      {% assign back_color = site.post_color %}
+                                    {% endif %}
+                                    {% if verb == 'PUT' %}
+                                      {% assign back_color = site.put_color %}
+                                    {% endif %}
+                                    {% if verb == 'DELETE' %}
+                                      {% assign back_color = site.delete_color %}
+                                    {% endif %}
+
+                                    {% assign summary = method[1].summary %}
+
+                                    {% if tag == grouptag %}
+                                      <tr>
+                                        <td style="padding-left: 20px; font-size: 12px;">{{ summary }}</td>
+                                        <td style="font-size: 12px;">{{ path[0] }}</td>
+                                        <td align="center" style="padding: 5px; width: 75px; background-color:#{{ back_color }}; font-weight: bold; font-size: 11px; color: #FFF;">
+                                          {{ verb }}
+                                        </td>
+                                      </tr>
+                                    {% endif %}
+
+                                  {% endfor %}
+                                {% endif %}
+
+
                               {% endfor %}
                             {% endfor %}
 
