--- a/documentation/index.html
+++ b/documentation/index.html
@@ -205,14 +205,14 @@ layout: page
                               {% assign this_path = path[0] %}
                               {% assign method_json = path[1] %}
 
-                              {% assign filter_path = 0 %}
+                              {% assign filter_path = 1 %}
                               {% for filter in api_filters %}
                                 {% assign this_filter_name = filter.name %}
                                 {% if this_filter_name != filter_name %}
-                                  {% assign filter_path = 1 %}
+                                  {% assign filter_path = 0 %}
                                 {% endif %}
                               {% endfor %}
-
+                              Filter Path: {{ filter_path }}<br />
                               {% if filter_path == 0 %}
                                 {% for method in method_json %}
                                   {% assign tagarray = method[1].tags %}
@@ -241,14 +241,14 @@ layout: page
                                 {% assign this_path = path[0] %}
                                 {% assign method_json = path[1] %}
 
-                                {% assign filter_path = 0 %}
+                                {% assign filter_path = 1 %}
                                 {% for filter in api_filters %}
                                   {% assign this_filter_name = filter.name %}
                                   {% if this_filter_name != filter_name %}
-                                    {% assign filter_path = 1 %}
+                                    {% assign filter_path = 0 %}
                                   {% endif %}
                                 {% endfor %}
-
+                                Filter Path: {{ filter_path }}<br />
                                 {% if filter_path == 0 %}
                                   {% for method in method_json %}
 
