--- a/documentation/index.html
+++ b/documentation/index.html
@@ -209,10 +209,14 @@ layout: page
                               {% for filter in api_filters %}
                                 {% assign this_filter_name = filter.name %}
                                 {% if this_filter_name != filter_name %}
-                                  {% assign filter_path = 0 %}
+                                  {% for show in filter.path %}
+                                    {% if this_path != show %}
+                                      {% assign filter_path = 0 %}
+                                    {% endfor %}
+                                  {% endfor %}
                                 {% endif %}
                               {% endfor %}
-                              Filter Path: {{ filter_path }}<br />
+
                               {% if filter_path == 0 %}
                                 {% for method in method_json %}
                                   {% assign tagarray = method[1].tags %}
@@ -245,10 +249,14 @@ layout: page
                                 {% for filter in api_filters %}
                                   {% assign this_filter_name = filter.name %}
                                   {% if this_filter_name != filter_name %}
-                                    {% assign filter_path = 0 %}
+                                    {% for show in filter.path %}
+                                      {% if this_path != show %}
+                                        {% assign filter_path = 0 %}
+                                      {% endfor %}
+                                    {% endfor %}
                                   {% endif %}
                                 {% endfor %}
-                                Filter Path: {{ filter_path }}<br />
+
                                 {% if filter_path == 0 %}
                                   {% for method in method_json %}
 
