--- a/documentation/index.html
+++ b/documentation/index.html
@@ -212,7 +212,7 @@ layout: page
                                   {% for show in filter.path %}
                                     {% if this_path != show %}
                                       {% assign filter_path = 0 %}
-                                    {% endfor %}
+                                    {% endif %}
                                   {% endfor %}
                                 {% endif %}
                               {% endfor %}
