--- a/documentation/index.html
+++ b/documentation/index.html
@@ -250,6 +250,7 @@ layout: page
                                   {% assign this_filter_name = filter.name %}
                                   {% if this_filter_name != filter_name %}
                                     {% for show in filter.path %}
+                                      {{ this_path }} != {{ show }}<br />
                                       {% if this_path != show %}
                                         {% assign filter_path = 0 %}
                                       {% endif %}
