--- a/documentation/index.html
+++ b/documentation/index.html
@@ -209,14 +209,10 @@ layout: page
                               {% for filter in api_filters %}
                                 {% assign this_filter_name = filter.name %}
                                 {% if this_filter_name != filter_name %}
-                                  {% for show in filter.path %}
-                                    {% if this_path != show %}
-                                      {% assign filter_path = 0 %}
-                                    {% endif %}
-                                  {% endfor %}
+                                  {% assign filter_path = 0 %}
                                 {% endif %}
                               {% endfor %}
-
+                              
                               {% if filter_path == 0 %}
                                 {% for method in method_json %}
                                   {% assign tagarray = method[1].tags %}
@@ -236,7 +232,7 @@ layout: page
                           {% for grouptag in tagArray %}
 
                             <tr>
-                              <td colspan="3" style="padding-top: 10px;">11<strong>{{ grouptag }}</strong></td>
+                              <td colspan="3" style="padding-top: 10px;"><strong>{{ grouptag }}</strong></td>
                             </tr>
 
                             {% for spec in openapi_spec_json %}
@@ -248,14 +244,9 @@ layout: page
                                 {% assign filter_path = 1 %}
                                 {% for filter in api_filters %}
                                   {% assign this_filter_name = filter.name %}
-                                  {{ this_filter_name }} != {{ filter_name }}<br />
+                                  {{ this_filter_name }} != {{ filter_name }} <br />
                                   {% if this_filter_name != filter_name %}
-                                    {% for show in filter.path %}
-                                      {{ this_path }} != {{ show }}<br />
-                                      {% if this_path != show %}
-                                        {% assign filter_path = 0 %}
-                                      {% endif %}
-                                    {% endfor %}
+                                    {% assign filter_path = 0 %}
                                   {% endif %}
                                 {% endfor %}
 
