--- a/documentation/index.html
+++ b/documentation/index.html
@@ -212,7 +212,7 @@ layout: page
                                   {% assign filter_path = 0 %}
                                 {% endif %}
                               {% endfor %}
-                              
+
                               {% if filter_path == 0 %}
                                 {% for method in method_json %}
                                   {% assign tagarray = method[1].tags %}
@@ -245,9 +245,12 @@ layout: page
                                 {% for filter in api_filters %}
                                   {% assign this_filter_name = filter.name %}
                                   {{ this_filter_name }} != {{ filter_name }} <br />
-                                  {% if this_filter_name != filter_name %}
-                                    {% assign filter_path = 0 %}
-                                  {% endif %}
+                                  {% for show in filter.path %}
+                                    show: {{ show }}<br />
+                                    {% if this_filter_name != filter_name %}
+                                      {% assign filter_path = 0 %}
+                                    {% endif %}
+                                  {% endfor %}
                                 {% endfor %}
 
                                 {% if filter_path == 0 %}
