--- a/documentation/index.html
+++ b/documentation/index.html
@@ -245,7 +245,9 @@ layout: page
                                 {% for filter in api_filters %}
                                   {% assign this_filter_name = filter.name %}
                                   {% for show in filter.filters %}
+
                                     {% if this_path != show.path %}
+                                      {{ this_path }} != {{ show.path }}<br />
                                       {% assign filter_path = 0 %}
                                     {% endif %}
                                   {% endfor %}
