--- a/documentation/index.html
+++ b/documentation/index.html
@@ -174,12 +174,10 @@ layout: page
 
                     {% endfor %}
 
-                    {% if api_filter_path != null and api_filter_path != empty %}
-                      <tr style="background-color: #D3D3D3;">
+                    {% if filter_name != null and filter_name != empty %}
+                      <tr>
                         <td align="center" colspan="2" style="font-size: 18px; font-weight: bold; padding: 10px;">
-                          {% for filter in api_filters %}
-                            {{ filter.name }}<br />
-                          {% endfor %}
+                          {{ filter_name }}
                         </td>
                       </tr>
                     {% endif %}
