--- a/documentation/learn-the-basics/index.html
+++ b/documentation/learn-the-basics/index.html
@@ -21,7 +21,7 @@ layout: page
 {% assign contents = site.data.api-commons %}
 {% assign apicommons = contents %}
 
-{% assign filter_name = '' %}
+{% assign filter_name = 'Learn the Basics' %}
 
 {% assign blog_url = '' %}
 {% assign blogrss_url = '' %}
