--- a/documentation/learn-the-basics/index.html
+++ b/documentation/learn-the-basics/index.html
@@ -86,7 +86,10 @@ layout: page
 
   <tr>
     <td>
-      <a href="{{ site.url }}" style="font-size: 22px;"><strong>API Documentation</strong></a><br />
+        <strong>API Documentation</strong>
+        {% if filter_name != null and filter_name != empty %}
+         - {{ filter_name }}
+        {% endif %}
     </td>
   </tr>
   <tr>
@@ -173,14 +176,6 @@ layout: page
                       {% endif %}
 
                     {% endfor %}
-
-                    {% if filter_name != null and filter_name != empty %}
-                      <tr>
-                        <td align="center" colspan="2" style="font-size: 18px; font-weight: bold; padding: 10px;">
-                          {{ filter_name }}
-                        </td>
-                      </tr>
-                    {% endif %}
 
                     <tr style="background-color: #D3D3D3;">
                       <td align="left" style="font-size: 18px; font-weight: bold; padding: 10px;">
