--- a/documentation/index.html
+++ b/documentation/index.html
@@ -86,14 +86,18 @@ layout: page
 
   <tr>
     <td>
-        <strong>API Documentation</strong>
-        (<a href="learn-the-basics/" style="font-size: 18px;">Learn The Basics</a>)
-        (<a href="services-summary/" style="font-size: 18px;">Services Summary</a>)
+        <span style="font-size: 22px;"><strong>API Documentation</strong></span>
     </td>
   </tr>
   <tr>
     <td style="padding: 10px;">
       {{ apijson.description }}
+    </td>
+  </tr>
+  <tr>
+    <td align='center'>
+        (<a href="learn-the-basics/" style="font-size: 18px;">Learn The Basics</a>)
+        (<a href="services-summary/" style="font-size: 18px;">Services Summary</a>)
     </td>
   </tr>
   <tr>
