--- a/documentation/index.html
+++ b/documentation/index.html
@@ -95,7 +95,7 @@ layout: page
     </td>
   </tr>
   <tr>
-    <td align='center'>
+    <td align="center" style="padding-bottom: 5px;">
         (<a href="learn-the-basics/" style="font-size: 12px;">Learn The Basics</a>)
         (<a href="services-summary/" style="font-size: 12px;">Services Summary</a>)
     </td>
