--- a/documentation/learn-the-basics/index.html
+++ b/documentation/learn-the-basics/index.html
@@ -95,7 +95,7 @@ layout: page
     </td>
   </tr>
   <tr>
-    <td align='center'>
+    <td align="center" style="padding-bottom: 5px;">
         (<a href="../index.html" style="font-size: 18px;">Full Documentation</a>)
     </td>
   </tr>
