--- a/documentation/services-summary/index.html
+++ b/documentation/services-summary/index.html
@@ -96,7 +96,7 @@ layout: page
   </tr>
   <tr>
     <td align="center" style="padding-bottom: 5px;">
-        (<a href="../index.html" style="font-size: 18px;">Full Documentation</a>)
+        (<a href="../index.html" style="font-size: 14px;">Full Docs</a>)
     </td>
   </tr>
   <tr>
