--- a/documentation/index.html
+++ b/documentation/index.html
@@ -113,7 +113,7 @@ layout: page
                 {% for api in apijson.apis %}
 
                 <table cellpadding="3" cellspacing="2" width="100%" border="1">
-
+                    {% strip %}
                     {% assign api_action_spec = '' %}
                     {% assign api_action_url = '' %}
                     {% assign openapi_spec_json = '' %}
@@ -179,7 +179,7 @@ layout: page
                       {% endif %}
 
                     {% endfor %}
-
+                    {% endstrip %}
                     {% if filter_name != null and filter_name != empty %}
                       <tr>
                         <td align="center" colspan="2" style="font-size: 18px; font-weight: bold; padding: 10px;">
@@ -202,6 +202,7 @@ layout: page
                       <td colspan="2">
 
                         <table width="95%" border="0" style="margin-left: 15px; margin-right: 15px;">
+                          {% strip %}
                           {% assign taglist = '' %}
                           {% for spec in openapi_spec_json %}
                             {% for path in spec.paths %}
@@ -242,11 +243,11 @@ layout: page
 
                           {% assign tagArray = taglist | split: "," %}
                           {% for grouptag in tagArray %}
-
+                          {% endstrip %}
                             <tr>
                               <td colspan="3" style="padding-top: 10px;"><strong>{{ grouptag }}</strong></td>
                             </tr>
-
+                            {% strip %}
                             {% for spec in openapi_spec_json %}
                               {% for path in spec.paths %}
 
@@ -291,7 +292,7 @@ layout: page
                                     {% endif %}
 
                                     {% assign summary = method[1].summary %}
-
+                                    {% endstrip %}
                                     {% if tag == grouptag %}
                                       <tr>
                                         <td style="padding-left: 20px; font-size: 12px;">{{ summary }}</td>
@@ -300,6 +301,7 @@ layout: page
                                           {{ verb }}
                                         </td>
                                       </tr>
+                                    {% strip %}
                                     {% endif %}
 
                                   {% endfor %}
@@ -310,7 +312,7 @@ layout: page
                             {% endfor %}
 
                           {% endfor %}
-
+                          {% endstrip %}
                           <tr style="background-color: #D3D3D3;">
                             <td colspan="3"></td>
                           </tr>
